--- a/portfolio.html
+++ b/portfolio.html
@@ -89,16 +89,14 @@
       padding: 0;
     }  
 
-    .line {
-      position:relative;
-      bottom:-50px;
-      width: 100%;
-      height: 3px;
-      background-color: #000000;
-      position: absolute;
-      margin-bottom:24px;
-      border-radius: 2px;
-    }
+   .line {
+    width: 100%;
+    height: 3px;
+    background-color: #000000;
+    margin: 75px 0 24px 0;
+    border-radius: 2px;
+ 
+   }
 
     .about{
       position:relative;
@@ -110,6 +108,12 @@
       justify-content: center;
       text-align: center; 
     }
+
+    .Me{
+    display: block;
+    margin: 30px auto 0 auto; 
+  }
+    
 
     
 
@@ -149,6 +153,7 @@
 
     <div class="About">
         <h1>About Me</h1>
+        <img src="images/ceile.png" class="Me">
     </div>
 </body>
 </html>
