--- a/portfolio.html
+++ b/portfolio.html
@@ -127,6 +127,15 @@
      <div class="project-photo">
       <img src="images/post4.png" alt="Battle Arena">
 
+       <div class="project-photo">
+      <img src="images/post5.png" alt="Compete">
+
+      <div class="project-photo">
+      <img src="images/post6.png" alt="Programmer">
+
+       <div class="project-photo">
+      <img src="images/post7.png" alt="Mama Marry">
+
       
     </div>
   </div>
