--- a/portfolio.html
+++ b/portfolio.html
@@ -136,9 +136,52 @@
       <div class="project-photo">
         <img src="images/post8.png" alt="Compete">
       </div>
+      <div class="project-photo">
+        <img src="images/post9.png" alt="IC3">
+      </div>
+       <div class="project-photo">
+        <img src="images/post10.png" alt="IC3">
+      </div>
+      <div class="project-photo">
+        <img src="images/post11.png" alt="IC3">
+      </div>
+      <div class="project-photo">
+        <img src="images/post12.png" alt="IC3">
+      </div>
+    </div>
+
+    <div class="socmed24-posters">
+      <h1>Posters</h1>
+    </div>
+
+    <div class="gallery-container2">
+      <div class="project-photo2">
+        <img src="images/poster1.png" alt="poster1">
+      </div>
+      <div class="project-photo2">
+        <img src="images/poster2.png" alt="poster2">
+      </div>
+      <div class="project-photo2">
+        <img src="images/poster3.png" alt="poster3">
+      </div>
+      <div class="project-photo2">
+        <img src="images/poster4.png" alt="poster4">
+      </div>
      
 
+
+      <div class="socmed25-content">
+      <h1>Social Media Post 2025</h1>
     </div>
+  </section>
+
+
+  <section class="Projects">
+    <div class="Projects-content">
+      <h1>Projects</h1>
+    </div>
+
+   
   </section>
     
 
