--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,18 @@
 <section class="aboutc">
 <div class="aboutc-content">
   <div class="Title"> 
-    <p>PORTFOLIO</p>
+
+    <p class="text-hover-wrap">
+      <span class="hover-text">PORTFOLIO</span>
+      <canvas class="hover-canvas"></canvas>
+    </p>
   </div>
 
   <div class="intro">
-    <h1>Ceile Guce</h1>
+    <h1 class="text-hover-wrap">
+      <span class="hover-text">Ceile Guce</span>
+      <canvas class="hover-canvas"></canvas>
+    </h1>
   
     <div class="sub">
       <p>Computer Science</p>
@@ -181,8 +188,28 @@
       <h1>Projects</h1>
     </div>
 
+    <div class="project-gallery">
+      <div class="project-card">
+        <img src="images/prj1.png" alt="Digital Pet">
+      </div>
+      <div class="project-card">
+        <img src="images/prj2.png" alt="ECOGIVE">
+      </div>
+      <div class="project-card">
+        <img src="images/" alt="ECOGIVE">
+      </div>
+      <div class="project-card">
+        <img src="images/" alt="ECOGIVE">
+      </div>
+
+    </div>
+
    
   </section>
+
+
+  <script src="script.js">
+  </script>
     
 
 
